# autoresearch

./: .gitmodules  _autoresearch_config.json  prepare.py  program.md  pyproject.toml  train.py  train_config.json
