[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous diffusion policy hyperparameter tuning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lerobot",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
]

[tool.uv.sources]
lerobot = { path = "./lerobot", editable = true }
